<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand"
    android:padding="@dimen/padding_regular"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/hex"
                style="@style/number_sys_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regular"
                android:background="@drawable/number_system"
                android:text="@string/hex_btn"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/view"
                />
            <TextView
                android:id="@+id/txt_hex"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/margin_regular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decimal"
                style="@style/number_sys_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/number_system"
                android:text="@string/decimal_btn"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/hex"
                app:layout_constraintStart_toStartOf="@+id/hex"
                app:layout_constraintTop_toBottomOf="@+id/hex"

                />

            <TextView
                android:id="@+id/text_decimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/margin_regular"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/octal"
                style="@style/number_sys_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/number_system"
                android:text="@string/octal_btn"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/hex"
                app:layout_constraintStart_toStartOf="@+id/hex"
                app:layout_constraintTop_toBottomOf="@+id/decimal"
                />

            <TextView
                android:id="@+id/text_octal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/margin_regular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/binary"
                style="@style/number_sys_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/number_system"
                android:text="@string/binary_btn"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/view"
                app:layout_constraintEnd_toEndOf="@id/hex"
                app:layout_constraintStart_toStartOf="@id/hex"
                app:layout_constraintTop_toBottomOf="@+id/octal"
                />

            <TextView
                android:id="@+id/text_binary"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/margin_regular"
                />

        </LinearLayout>


        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:padding="@dimen/margin_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/input_size" />

        </HorizontalScrollView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_clear"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/one_btn"
        app:layout_constraintEnd_toStartOf="@+id/f_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/d_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/e_btn"
        app:layout_constraintTop_toTopOf="@+id/e_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/f_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/f"
        app:layout_constraintEnd_toStartOf="@+id/e_btn"
        app:layout_constraintStart_toEndOf="@+id/clear_btn"
        app:layout_constraintTop_toTopOf="@+id/clear_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/e_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/e"
        app:layout_constraintEnd_toStartOf="@+id/d_btn"
        app:layout_constraintStart_toEndOf="@+id/f_btn"
        app:layout_constraintTop_toTopOf="@+id/f_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/btn_regular"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/four_btn"
        app:layout_constraintEnd_toEndOf="@+id/clear_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/clear_btn"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/two"
        app:layout_constraintEnd_toEndOf="@+id/f_btn"
        app:layout_constraintStart_toStartOf="@+id/f_btn"
        app:layout_constraintTop_toTopOf="@+id/one_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/three"
        app:layout_constraintEnd_toEndOf="@+id/e_btn"
        app:layout_constraintStart_toStartOf="@+id/e_btn"
        app:layout_constraintTop_toTopOf="@+id/one_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/c_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/c"
        app:layout_constraintEnd_toEndOf="@+id/d_btn"
        app:layout_constraintStart_toStartOf="@+id/d_btn"
        app:layout_constraintTop_toTopOf="@+id/one_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/btn_regular"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/seven_btn"
        app:layout_constraintEnd_toEndOf="@+id/one_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/one_btn"
        app:layout_constraintTop_toBottomOf="@+id/one_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/five"
        app:layout_constraintEnd_toEndOf="@+id/two_btn"
        app:layout_constraintStart_toStartOf="@+id/two_btn"
        app:layout_constraintTop_toTopOf="@+id/four_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/six"
        app:layout_constraintEnd_toEndOf="@+id/three_btn"
        app:layout_constraintStart_toStartOf="@+id/three_btn"
        app:layout_constraintTop_toTopOf="@+id/four_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/b"
        app:layout_constraintEnd_toEndOf="@+id/c_btn"
        app:layout_constraintStart_toStartOf="@+id/c_btn"
        app:layout_constraintTop_toTopOf="@+id/four_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/btn_regular"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/zero_btn"
        app:layout_constraintEnd_toEndOf="@+id/four_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/four_btn"
        app:layout_constraintTop_toBottomOf="@+id/four_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/eight"
        app:layout_constraintEnd_toEndOf="@+id/five_btn"
        app:layout_constraintStart_toStartOf="@+id/five_btn"
        app:layout_constraintTop_toTopOf="@+id/seven_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/nine"
        app:layout_constraintEnd_toEndOf="@+id/six_btn"
        app:layout_constraintStart_toStartOf="@+id/six_btn"
        app:layout_constraintTop_toTopOf="@+id/seven_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/a_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:text="@string/a"
        app:layout_constraintEnd_toEndOf="@+id/b_btn"
        app:layout_constraintStart_toStartOf="@+id/b_btn"
        app:layout_constraintTop_toTopOf="@+id/seven_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/btn_regular"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/seven_btn"
        app:layout_constraintEnd_toStartOf="@+id/result_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/seven_btn"
        app:layout_constraintTop_toBottomOf="@+id/seven_btn" />

    <Button
        android:id="@+id/backspace_btn"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="@dimen/btn_dimens"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_regular"
        android:drawableTint="@color/white"
        android:text="0"
        app:icon="@android:drawable/ic_input_delete"
        app:layout_constraintBottom_toBottomOf="@+id/zero_btn"
        app:layout_constraintEnd_toEndOf="@+id/eight_btn"
        app:layout_constraintStart_toStartOf="@+id/eight_btn"
        app:layout_constraintTop_toTopOf="@+id/zero_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/result_btn"
        style="@style/calc_button"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/btn_dimens"
        android:background="@drawable/btn_result"
        android:text="@string/equals"
        android:textColor="@color/light_blue"
        app:layout_constraintBottom_toBottomOf="@+id/zero_btn"
        app:layout_constraintEnd_toEndOf="@+id/a_btn"
        app:layout_constraintStart_toStartOf="@+id/nine_btn"
        app:layout_constraintTop_toTopOf="@+id/zero_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>